--- a/README/index.html
+++ b/README/index.html
@@ -3,11 +3,10 @@
     <head>
         <meta charset="UTF-8"><base href="/virgil-font/">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-        <title># fpm-template
-FPM Blank Package Template Repo</title>
+        <title>README.ftd</title>
         <script type="ftd" id="ftd-data">{
   "fifthtry.github.io/virgil-font/README/#content@0": {
-    "value": "# fpm-template\nFPM Blank Package Template Repo",
+    "value": "# Virgil Font\n\n[`fifthtry.github.io/virgil-font`](https://fifthtry.github.io/virgil-font) is a wrapper over [Virgil font](https://github.com/excalidraw/virgil).\n\n\n[How to Use fonts](https://fpm.dev/how-to/how-to-use-fonts/).\n\n# License\n\n[Inter is distributed under SIL Open Font License 1.1](https://github.com/excalidraw/virgil/blob/main/LICENSE.md). We use the same license to be compatible with them.",
     "dependencies": {
       "0": [
         {
@@ -239,7 +238,12 @@ body.fpm-dark .ft_md a:visited code {
 }</style>
     </head>
     <body>
-        <div data-id="main:root" style="align-items: flex-start; border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; display: flex; flex-direction: column; flex-wrap: nowrap; height: 100%; justify-content: flex-start; text-decoration: none; white-space: initial; width: 100%" ><div data-id="0:main" style="border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; text-align: left; text-decoration: none; white-space: initial" class="ft_md"><h1>fpm-template</h1> <p>FPM Blank Package Template Repo</p></div></div><style>@font-face { font-style: Normal;
+        <div data-id="main:root" style="align-items: flex-start; border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; display: flex; flex-direction: column; flex-wrap: nowrap; height: 100%; justify-content: flex-start; text-decoration: none; white-space: initial; width: 100%" ><div data-id="0:main" style="border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; line-height: 26px; text-align: left; text-decoration: none; white-space: initial" class="ft_md"><p data-id="0,0:main" style="border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; line-height: 26px; text-align: left; text-decoration: none; white-space: initial" class="ft_md"><h1>Virgil Font</h1>
+</p><p data-id="0,1:main" style="border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; line-height: 26px; text-align: left; text-decoration: none; white-space: initial" class="ft_md"><p><a href="https://fifthtry.github.io/virgil-font"><code>fifthtry.github.io/virgil-font</code></a> is a wrapper over <a href="https://github.com/excalidraw/virgil">Virgil font</a>.</p>
+</p><p data-id="0,2:main" style="border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; line-height: 26px; text-align: left; text-decoration: none; white-space: initial" class="ft_md"><p><a href="https://fpm.dev/how-to/how-to-use-fonts/">How to Use fonts</a>.</p>
+</p><p data-id="0,3:main" style="border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; line-height: 26px; text-align: left; text-decoration: none; white-space: initial" class="ft_md"><h1>License</h1>
+</p><p data-id="0,4:main" style="border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; line-height: 26px; text-align: left; text-decoration: none; white-space: initial" class="ft_md"><p><a href="https://github.com/excalidraw/virgil/blob/main/LICENSE.md">Inter is distributed under SIL Open Font License 1.1</a>. We use the same license to be compatible with them.</p>
+</p></div></div><style>@font-face { font-style: Normal;
 font-weight: 400;
 src: url(-/fifthtry.github.io/virgil-font/static/virgil.woff2) format('woff2');
 font-family: fifthtry-github-io-virgil-font-virgil }
